# f1_telem_API

./: CMakeLists.txt  README.md  f1_telem_API.properties  main.cpp  packet_handler.h  shared_header.h  udp_reciver.cpp  udp_reciver.h
f1structs/: CarSetupsPacket.h  CarStatusPacket.h  CarTelemetryPacket.h  EventPacket.h  LapDataPacket.h  MotionPacket.h  PacketHeader.h  ParticipantsPacket.h  SessionPacket.h  f1_storage.cpp  f1_storage.h
